; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_getset.c_array_protocol_strides_get.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_getset.c_array_protocol_strides_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Py_RETURN_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @array_protocol_strides_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @array_protocol_strides_get(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i64 @PyArray_ISCONTIGUOUS(i32* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @Py_RETURN_NONE, align 4
  br label %8

8:                                                ; preds = %6, %1
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @PyArray_NDIM(i32* %9)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @PyArray_STRIDES(i32* %11)
  %13 = call i32* @PyArray_IntTupleFromIntp(i32 %10, i32 %12)
  ret i32* %13
}

declare dso_local i64 @PyArray_ISCONTIGUOUS(i32*) #1

declare dso_local i32* @PyArray_IntTupleFromIntp(i32, i32) #1

declare dso_local i32 @PyArray_NDIM(i32*) #1

declare dso_local i32 @PyArray_STRIDES(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
